--- a/youzone/index.html
+++ b/youzone/index.html
@@ -1,13 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="preload"
+      as="image"
+      href="https://i.ytimg.com/vi/VIDEO_ID/mqdefault.jpg"
+      fetchpriority="high"
+    />
     <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://www.googleapis.com" />
+    <!-- YouTube API -->
+    <link rel="preconnect" href="https://i.ytimg.com" />
+    <!-- Thumbnails -->
+
+    <!-- Preconnect to Google font origins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Non-blocking font load -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+      media="print"
+      onload="this.media='all'"
+    />
+
+    <!-- Fallback -->
+    <noscript>
+      <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+        rel="stylesheet"
+      />
+    </noscript>
+
+    <!-- ✅ Optimized Google Font with font-display=swap -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- ✅ Favicon -->
     <link
       rel="icon"
       type="image/svg+xml"
       href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRlJnWgvlWz5GC16a1ild0Ez0IGQfdIk97SXg&s"
     />
+
+    <!-- ✅ Responsive meta tag -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- ✅ Title -->
     <title>Streamly</title>
   </head>
   <body>
